--- a/templates/index.html
+++ b/templates/index.html
@@ -40,6 +40,7 @@
         <div class="lang-detected" id="lang_detected"></div>
 
         <div class="output-container">
+            <label for="output_text" class="translation-label">Traduction :</label>
             <textarea id="output_text" readonly placeholder="Traduction..."></textarea>
 
             <div class="buttons">
